[project]
name = "projet-04-adduction-eau"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kejea23912", email = "kejea23912@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
